feat-v0.4.0-core-loop
